<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_assignment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_assignment" />
        <item
            android:id="@+id/cat_answers"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_cat" />
        <item
            android:id="@+id/exam_anwers"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_exam" />
        <item
            android:id="@+id/nave_application"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_application" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_about"
           />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_help_feedback"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_terms"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_terms" />
        </menu>
    </item>

</menu>
